--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,14 +30,8 @@
 
 <main>
   <article>
-    <div style="min-height: 500px;">
+    <div style="min-height: 500px; height:100%;">
       <router-outlet></router-outlet>
     </div>
   </article>
 </main>
-
-<footer class="bg-primary text-center text-white mt-5">
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    <p class="copyright" class="mt-2">&copy; 2023 Por Talento Digital Fundación ONCE.</p>
-  </div>
-</footer>
