--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
   <div class="row mt-5 p-2">
     <div class="col-md-3" *ngFor="let product of products">
       <div class="card overflow-hidden mb-3">
@@ -12,7 +12,7 @@
             <h5>{{ product.price }}{{ product.symbol }}</h5>
           </div>
           <div class="mx-3 mt-3 d-block text-center">
-            <button type="button" class="btn btn-block text-black btn-outline-secondary ps-5 pe-5">Agregar alcarrito</button>
+            <button type="button" class="btn btn-block text-black btn-outline-secondary ps-5 pe-5">Agregar al carrito</button>
           </div>
         </div>
       </div>
