--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,70 +1,19 @@
-<footer class="py-2 text-light border-top" style="background-color:rgb(136, 107, 107) ">
-    <div class="row">
-        <div class="col-6 col-md-2 mb-sm-1">
-            <h6>SOBRE NOSOTROS</h6>
-            <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">ShopposH</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">Tiendas ShopposH</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">bussiner</a>
-                </li>
+<footer class="py-1 text-bg-dark border-top fixed-bottom">
 
-
-            </ul>
-
-        </div>
-        <div class="col-6 col-md-2 mb-3">
-            <h6>AYUDA</h6>
-            <ul class="nav flex-column">
-
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">Envios</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">Devoluciones</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">Financiacion</a>
-                </li>
-
-            </ul>
-
-        </div>
-        <div class="col-6 col-md-2 mb-3">
-            <h6>DESCUBRE</h6>
-            <ul class="nav flex-column">
-
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">Catálagos</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">Black Friday</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-light">Navidad</a>
-                </li>
-
-            </ul>
-
-        </div>
-        <div class="col-md-5 offset-md-1 mb-3">
-            <form>
-                <h5>Suscripcion boletin informativo</h5>
-                <p>Informacion mensual de nuestros productos y ofertas</p>
-                <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                    <label for="newsletter1" class="visually-hidden">Email</label>
-                    <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                    <button class="btn btn-primary" type="button">Suscripcion</button>
-                </div>
-            </form>
-        </div>
-        <div class="d-flex flex-column flex-sm-row justify-content-between py-0 my-0 border-top">
-            <p>© 2023 PortalentoDigital, Inc. Derechos Reservados</p>
-
-        </div>
+    <div class="col-md-5 offset-md-6 mb-3">
+        <form >
+            <h5>Suscripcion boletin informativo</h5>
+            <p>Informacion mensual de nuestros productos y ofertas</p>
+            <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                <label for="newsletter1" class="visually-hidden">Email</label>
+                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                <button class="btn text-bg-info" type="button">Suscripcion</button>
+            </div>
+        </form>
     </div>
+    <div class="flex-sm-row justify-content- py-0 my-0 border-top">
+        <p>© 2023 PortalentoDigital, Inc. Derechos Reservados</p>
+
+    </div>
+
 </footer>
