--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+
+    usuario: <input [(ngModel)]="user"> <br>
+    clave: <input type="password" [(ngModel)]="pwd"><br>
+   <button (click)="enviar()"> enviar</button>
+
+   <h1>{{user}}</h1>
+
