--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,53 @@
-<div class="container bg-success">
-    <h1>Bienvenido al Banco</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-         Cumque nostrum voluptatem eveniet quia earum. Reprehenderit ab molestias tempore voluptatibus
-         , vel esse consequuntur dolor provident est perspiciatis, temporibus quae quasi! Ut.</p>
-</div>
+<style>
+    .green-background {
+      background-color: rgb(55, 163, 55);
+      color: rgb(255, 255, 255);
+    }
+  </style>
+  
+  <body class="green-background">
+
+  <header>
+    <!-- Aquí puedes agregar el encabezado de tu landing -->
+  </header>
+
+  <main>
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1>
+        <p class="lead">Aquí puedes incluir una descripción breve de tu producto o servicio.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">¡Regístrate ahora!</a>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Beneficio 1</h2>
+          <p>Aquí puedes destacar el primer beneficio de tu producto o servicio.</p>
+        </div>
+        <div class="col-md-6">
+          <h2>Beneficio 2</h2>
+          <p>Aquí puedes destacar el segundo beneficio de tu producto o servicio.</p>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2>Beneficio 3</h2>
+            <p>Aquí puedes destacar el primer beneficio de tu producto o servicio.</p>
+          </div>
+          <div class="col-md-6">
+            <h2>Beneficio 4</h2>
+            <p>Aquí puedes destacar el segundo beneficio de tu producto o servicio.</p>
+          </div>
+        </div>
+      </section>
+  </main>
+
+  <footer>
+    <!-- Aquí puedes agregar el pie de página de tu landing -->
+  </footer>
+
+ 
