--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,1 @@
-
-<div class="container">
-    <h1>Bienvenido al Banco</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-         Cumque nostrum voluptatem eveniet quia earum. Reprehenderit ab molestias tempore voluptatibus
-         , vel esse consequuntur dolor provident est perspiciatis, temporibus quae quasi! Ut.</p>
-</div>
+footer works!
