--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -33,6 +33,7 @@
           <li class="nav-item">
             <a class="nav-link active" href="Fidelidad">Fidelidad</a>
           </li>
+          <!--hola dany-->
 
 
 
