--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,11 @@
-<div>
-    <img src="" alt="logo">
-</div>
+<header>
 
+    <nav class="navbar navbar-expand-lg navbar-darck bg-danger">
+        <div class="container-fluid">
+            <!--<app-nav></app-nav>-->
+            
+            <app-login></app-login>
+        </div>
+    </nav>
 
-<app-login></app-login>
-
-
+</header>
