--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-darck bg-danger">
         <div class="container-fluid">
-            <!--<app-nav></app-nav>-->
+            <app-nav></app-nav>
             
             <app-login></app-login>
         </div>
