--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,53 @@
-<p>footer works!</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-...tu-integridad-aqui..." crossorigin="anonymous" />
+
+<body class="green-background">
+    <footer class="footer">
+        <div class="container ">
+            <div class="footer-content">
+                <div class="footer-column">
+                    <h2>Contacto</h2>
+                    <h3>BANCAIN</h3>
+                    <p>Teléfono: 911106106</p>
+                    <p>Email: info@bancain.com</p>
+                    <p>Dirección: Calle de Fray Luis de León,11, 28012 Madrid</p>
+                </div>
+                <div class="footer-column">
+                    <h3>Enlaces rápidos</h3>
+                    <ul><h6>
+                        <li><a href="#" style="color: white;">Inicio</a></li>
+                        <li><a href="#" style="color: white;">Detalles</a></li>
+                        <li><a href="#" style="color: white;">Movimientos</a></li>
+                        <li><a href="#" style="color: white;">Operaciones</a></li>
+                        <li><a href="#" style="color: white;">Mis Productos</a></li>
+                        <li><a href="#" style="color: white;">Mis Cuentas</a></li>
+                        <li><a href="#" style="color: white;">Aviso legal</a></li>
+                        <li><a href="#" style="color: white;">Cookies</a></li>
+                    </h6></ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Redes sociales</h3>
+
+                    <!-- Facebook -->
+                    <a style="color: #3b5998; margin-right: 20px;" href="#!" role="button"><i
+                            class="fab fa-facebook-f fa-lg"></i></a>
+
+                    <!-- Twitter -->
+                    <a style="color: #55acee; margin-right: 20px;" href="#!" role="button"><i
+                            class="fab fa-twitter fa-lg"></i></a>
+
+                    <!-- Google -->
+                    <a style="color: #0077B5; margin-right: 20px;" href="#!" role="button"><i
+                            class="fab fa-linkedin-in fa-lg"></i></a>
+
+                    <!-- Instagram -->
+                    <a style="color: #ac2bac;" href="#!" role="button"><i class="fab fa-instagram fa-lg"></i></a>
+
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2023 Bancain. Todos los derechos reservados.</p>
+            </div>
+        </div>
+    </footer>
+</body>
