--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,20 +28,20 @@
                 <div class="footer-column">
                     <h3>Redes sociales</h3>
 
-                    <!-- Facebook -->
-                    <a style="color: #3b5998; margin-right: 20px;" href="#!" role="button"><i
+                    
+                    <a style="color: #3b5998; margin-right: 20px;" href="https://www.facebook.com/" role="button"><i
                             class="fab fa-facebook-f fa-lg"></i></a>
 
-                    <!-- Twitter -->
-                    <a style="color: #55acee; margin-right: 20px;" href="#!" role="button"><i
+                    
+                    <a style="color: #55acee; margin-right: 20px;" href="https://www.twitter.com/" role="button"><i
                             class="fab fa-twitter fa-lg"></i></a>
 
-                    <!-- Google -->
-                    <a style="color: #0077B5; margin-right: 20px;" href="#!" role="button"><i
+                    
+                    <a style="color: #0077B5; margin-right: 20px;" href="https://www.linkedin.com/home" role="button"><i
                             class="fab fa-linkedin-in fa-lg"></i></a>
 
-                    <!-- Instagram -->
-                    <a style="color: #ac2bac;" href="#!" role="button"><i class="fab fa-instagram fa-lg"></i></a>
+                    
+                    <a style="color: #ac2bac;" href="https://www.instagram.com/" role="button"><i class="fab fa-instagram fa-lg"></i></a>
 
                 </div>
             </div>
