--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+.texto-primario{
+    color: white;
+}
+.texto-secundario{
+    background:rgb(39, 160, 76);
+}
+.texto-resaltado{
+    color: green;
+}
+.fondo-primario{
+    background:rgb(222, 253, 232);
+}
+.fondo-secundario{
+    background:rgb(39, 160, 76);
+}
+.fondo-resaltado{
+    color: green;
+}
