--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,10 +1,10 @@
 .cabecera{
-    background: rgb(39, 160, 76);
+    /* background: rgb(39, 160, 76); */
     height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: white;
+    /* color: white; */
 }
 .logoCabecera span{
     display: flex;
