--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,10 +1,4 @@
-<style>
-    .green-background {
-      background-color: rgb(55, 163, 55);
-      color: rgb(255, 255, 255);
-    }
-  </style>
-  
+
   <body class="green-background">
 
   <header>
@@ -15,35 +9,52 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1>
-        <p class="lead">Aquí puedes incluir una descripción breve de tu producto o servicio.</p>
+        <p class="lead">LA CUENTA QUE SE ADAPTA A TU VIDA </p>
         <a class="btn btn-primary btn-lg" href="#" role="button">¡Regístrate ahora!</a>
       </div>
     </section>
 
     <section class="container">
       <div class="row">
-        <div class="col-md-6">
-          <h2>Beneficio 1</h2>
-          <p>Aquí puedes destacar el primer beneficio de tu producto o servicio.</p>
+        <div class="col-md-6 ">
+          <h2>HAZTE CLIENTE CON LA CUENTA <br>
+                  ONLINE SIN COMISION 
+          </h2>
+          
         </div>
         <div class="col-md-6">
-          <h2>Beneficio 2</h2>
-          <p>Aquí puedes destacar el segundo beneficio de tu producto o servicio.</p>
+          <h2>Con  el  Servicio Cambio de Banco <br>
+              haremos la gestion por ti </h2>
+          <p>Una forma gratuita de trear  tus ingresos y tus recibos,<br>
+              tus cuentas de otros bancos,sin papeleos y estress<br>
+              <a class="btn btn-primary btn-lg" href="#" role="button">¡Hazte Cliente!</a>
+
+            </p>
         </div>
       </div>
     </section>
     <section class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Beneficio 3</h2>
-            <p>Aquí puedes destacar el primer beneficio de tu producto o servicio.</p>
-          </div>
-          <div class="col-md-6">
-            <h2>Beneficio 4</h2>
-            <p>Aquí puedes destacar el segundo beneficio de tu producto o servicio.</p>
+            <h2>CONECTADO SIEMPRE CONTIGO</h2>
+            <p>365 dias del año siempre estaremos a tu disposicion</p>
           </div>
         </div>
+        <section class="container">
+          <div class="row">
+            <div class="col-md-6 image-container">
+              <h2>LA QUIERES YA</h2>
+              <p>en menos de diez minutos lo puedes hacer</p>
+            </div>
+          </div>
+        </section>
       </section>
+     
+      <div class="container-fluid p-5  text-white text-center">
+        <h1>LA QUIERES YA</h1>
+        <h2>en menos de diez minutos lo puedes hacer!</h2> 
+        <a class="btn btn-primary btn-lg" href="#" role="button">¡Registrate!</a>
+      </div>
   </main>
 
   <footer>
