--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,35 @@
-<a routerLink="detalles">Detalles</a>
-<a routerLink="movimientos">Movimientos</a>
-<a routerLink="operaciones">Operaciones</a>
-<a routerLink="productos">Mis Productos</a>
-<a routerLink="cuentas">Mis cuentas</a>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
+        <div class="container-fluid">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Movimientos</a>
+              </li>
+             <li class="nav-item">
+                <a class="nav-link" href="#">Transferencias</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Productos Asociados</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Ajustes de la Cuenta</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">CAMBIAR DE CUENTA</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+</body>
+
+</html>
