--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,34 +14,37 @@
                 </div>
                 <div class="footer-column">
                     <h3>Enlaces rápidos</h3>
-                    <ul><h6>
-                        <li><a href="#" style="color: white;">Inicio</a></li>
-                        <li><a href="#" style="color: white;">Detalles</a></li>
-                        <li><a href="#" style="color: white;">Movimientos</a></li>
-                        <li><a href="#" style="color: white;">Operaciones</a></li>
-                        <li><a href="#" style="color: white;">Mis Productos</a></li>
-                        <li><a href="#" style="color: white;">Mis Cuentas</a></li>
-                        <li><a href="#" style="color: white;">Aviso legal</a></li>
-                        <li><a href="#" style="color: white;">Cookies</a></li>
-                    </h6></ul>
+                    <ul>
+                        <h6>
+                            <li><a class="texto-primario" href="#">Inicio</a></li>
+                            <li><a class="texto-primario" href="#">Detalles</a></li>
+                            <li><a class="texto-primario" href="#">Movimientos</a></li>
+                            <li><a class="texto-primario" href="#">Operaciones</a></li>
+                            <li><a class="texto-primario" href="#">Mis Productos</a></li>
+                            <li><a class="texto-primario" href="#">Mis Cuentas</a></li>
+                            <li><a class="texto-primario" href="#">Aviso legal</a></li>
+                            <li><a class="texto-primario" href="#">Cookies</a></li>
+                        </h6>
+                    </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Redes sociales</h3>
 
-                    
+
                     <a style="color: #3b5998; margin-right: 20px;" href="https://www.facebook.com/" role="button"><i
                             class="fab fa-facebook-f fa-lg"></i></a>
 
-                    
+
                     <a style="color: #55acee; margin-right: 20px;" href="https://www.twitter.com/" role="button"><i
                             class="fab fa-twitter fa-lg"></i></a>
 
-                    
+
                     <a style="color: #0077B5; margin-right: 20px;" href="https://www.linkedin.com/home" role="button"><i
                             class="fab fa-linkedin-in fa-lg"></i></a>
 
-                    
-                    <a style="color: #ac2bac;" href="https://www.instagram.com/" role="button"><i class="fab fa-instagram fa-lg"></i></a>
+
+                    <a style="color: #ac2bac;" href="https://www.instagram.com/" role="button"><i
+                            class="fab fa-instagram fa-lg"></i></a>
 
                 </div>
             </div>
