--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -7,8 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
+<body> -->
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
         <div class="container-fluid">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
@@ -29,7 +29,7 @@
             </ul>
           </div>
         </nav>
-
+<!-- 
 </body>
 
-</html>
+</html> -->
