--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 
-  <body class="green-background">
+  <body class="image-container">
 
   <header>
     <!-- Aquí puedes agregar el encabezado de tu landing -->
@@ -50,7 +50,7 @@
         </section>
       </section>
      
-      <div class="container-fluid p-5  text-white text-center">
+      <div class="container-fluid p-5  text-white text-center texto-resaltado" >
         <h1>LA QUIERES YA</h1>
         <h2>en menos de diez minutos lo puedes hacer!</h2> 
         <a class="btn btn-primary btn-lg" href="#" role="button">¡Registrate!</a>
