--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
 </head>
 
 <body> -->
-    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+    <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container-fluid">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
