--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,16 +1,16 @@
 <nav>
-  <ul class="nav nav-pills nav-justified">
+  <ul class="nav nav-pills nav-justified bg-dark"> 
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">Usuario</a>
+      <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">Usuario</a> 
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="Alta Usuario">Alta Usuario</a></li>
         <li><a class="dropdown-item" href="Baja Usuario">Baja Usuario</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">Categorias</a>
+      <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">Categorias</a> 
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="Alta Categoria">Alta Categoria</a></li>
         <li><a class="dropdown-item" href="Baja Categoria">Baja Categoria</a></li>
@@ -18,8 +18,8 @@
       </ul>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">Subcategorias</a>
+      <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">Subcategorias</a> 
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="Alta Subcategoria">Alta Subcategoria</a></li>
         <li><a class="dropdown-item" href="Baja Subcategoria">Baja Subcategoria</a></li>
@@ -27,8 +27,8 @@
       </ul>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">Productos</a>
+      <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">Productos</a> 
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="Alta Producto">Alta Producto</a></li>
         <li><a class="dropdown-item" href="Baja Producto">Baja Producto</a></li>
@@ -36,10 +36,9 @@
       </ul>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="Proveedores">Proveedores</a>
+      <a class="nav-link active bg-dark text-primary" href="Proveedores">Proveedores</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="Fidelidad">Fidelidad</a>
+      <a class="nav-link active bg-dark text-primary" href="Fidelidad">Fidelidad</a>
     </li>
-  </ul>
-</nav>
+
