--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="nav nav-pills nav-justified bg-dark"> 
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+      <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
         aria-expanded="false">Usuario</a> 
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="Alta Usuario">Alta Usuario</a></li>
@@ -9,7 +9,7 @@
       </ul>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+      <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
         aria-expanded="false">Categorias</a> 
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="Alta Categoria">Alta Categoria</a></li>
@@ -18,7 +18,7 @@
       </ul>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+      <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
         aria-expanded="false">Subcategorias</a> 
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="Alta Subcategoria">Alta Subcategoria</a></li>
@@ -27,7 +27,7 @@
       </ul>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+      <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
         aria-expanded="false">Productos</a> 
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="Alta Producto">Alta Producto</a></li>
@@ -36,9 +36,9 @@
       </ul>
     </li>
     <li class="nav-item">
-      <a class="nav-link active bg-dark text-primary" href="Proveedores">Proveedores</a>
+      <a class="nav-link active bg-dark text-white" href="Proveedores">Proveedores</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active bg-dark text-primary" href="Fidelidad">Fidelidad</a>
+      <a class="nav-link active bg-dark text-white" href="Fidelidad">Fidelidad</a>
     </li>
 
