--- a/src/app/product-data/product-data.component.html
+++ b/src/app/product-data/product-data.component.html
@@ -3,21 +3,21 @@
     <ng-template #modalProductAdd>
       <div class="modal-header">
         <h4 class="modal-title">Añadir nuevo producto</h4>
-        <button type="button" class="btn-close" (click)="closeModal()"></button>
+        <!--<button type="button" class="btn-close" (click)="closeModal()"></button>-->
       </div>
       <div class="modal-body">
         <form>
-          
+
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="closeModal()">Guardar</button>
-        <button type="button" class="btn btn-secondary" (click)="closeModal()">Cancelar</button>
+        <!--<button type="button" class="btn btn-primary" (click)="closeModal()">Guardar</button>
+        <button type="button" class="btn btn-secondary" (click)="closeModal()">Cancelar</button>-->
       </div>
     </ng-template>
-    <button type="button" class="btn btn-primary d-md-block me-2 mt-2 mb-2 rounded-0" (click)="openModal(modalProductAdd)">Añadir nuevo producto</button>
+    <!--<button type="button" class="btn btn-primary d-md-block me-2 mt-2 mb-2 rounded-0" (click)="openModal(modalProductAdd)">Añadir nuevo producto</button>-->
     <input type="text" [(ngModel)]="searchText" (input)="filterData()" placeholder="Buscar por descripción" class="w-100 form-control rounded-0">
-    
+
     <table class="table table-hover">
       <thead>
         <tr>
@@ -56,17 +56,4 @@
 
     </table>
     <p class="text-end" style="font-size: 0.8rem; color:#818181;">{{elements}}</p>
-
-    
-    <!--<nav aria-label="Page navigation">
-      <ul class="pagination justify-content-center">
-        <li class="page-item disabled">
-          <a class="page-link">Previous</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item">
-          <a class="page-link" href="#">Next</a>
-        </li>
-      </ul>
-    </nav>-->
   </div>
