--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,64 +1,61 @@
-
-  <body class="image-container">
+<body class="fondo-secundario">
 
   <header>
     <!-- Aquí puedes agregar el encabezado de tu landing -->
   </header>
 
   <main>
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1>
-        <p class="lead">LA CUENTA QUE SE ADAPTA A TU VIDA </p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">¡Regístrate ahora!</a>
-      </div>
-    </section>
-
-    <section class="container">
-      <div class="row">
-        <div class="col-md-6 ">
-          <h2>HAZTE CLIENTE CON LA CUENTA <br>
-                  ONLINE SIN COMISION 
-          </h2>
-          
+    <div class="container">
+      <section class="jumbotron text-center text-white texto-resaltado">
+        <div class="container">
+          <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1><br>
+          <p class="lead">LA CUENTA QUE SE ADAPTA A TU VIDA</p>
         </div>
-        <div class="col-md-6">
-          <h2>Con  el  Servicio Cambio de Banco <br>
-              haremos la gestion por ti </h2>
-          <p>Una forma gratuita de trear  tus ingresos y tus recibos,<br>
-              tus cuentas de otros bancos,sin papeleos y estress<br>
-              <a class="btn btn-primary btn-lg" href="#" role="button">¡Hazte Cliente!</a>
-
-            </p>
-        </div>
-      </div>
-    </section>
-    <section class="container">
+      </section>
+    </div><br>
+  
+    <div class="container">
+      <section class="container text-white texto-resaltado">
         <div class="row">
-          <div class="col-md-6">
-            <h2>CONECTADO SIEMPRE CONTIGO</h2>
-            <p>365 dias del año siempre estaremos a tu disposicion</p>
+          <div class="col-md-6 mb-4">
+            <h2>Con el Servicio Cambio de Banco <br> haremos la gestión por ti</h2>
+            <p>Una forma gratuita de traer tus ingresos y tus recibos,<br> tus cuentas de otros bancos, sin papeleos y
+              estrés<br>
+              <a>¡Hazte Cliente!</a>
+            </p>
+          </div>
+          <div class="col-md-6 mb-4 movimiento-online">
+            
           </div>
         </div>
-        <section class="container">
-          <div class="row">
-            <div class="col-md-6 image-container">
-              <h2>LA QUIERES YA</h2>
-              <p>en menos de diez minutos lo puedes hacer</p>
+      </section>
+    </div>
+  
+    <div class="container">
+      <section class="container text-white texto-resaltado">
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <h2>CONECTADO SIEMPRE CONTIGO</h2>
+            <p>365 días del año siempre estaremos a tu disposición</p><br>
+            <div>
+              <div class="percentage text-start">0%</div>
+              <p class="text-center" id="number">de Interés</p>
             </div>
           </div>
-        </section>
+          <div class="col-md-6 mb-4">
+            <div class="movimiento-objeto1"></div>
+          </div>
+        </div>
       </section>
-     
-      <div class="container-fluid p-5  text-white text-center texto-resaltado" >
-        <h1>LA QUIERES YA</h1>
-        <h2>en menos de diez minutos lo puedes hacer!</h2> 
-        <a class="btn btn-primary btn-lg" href="#" role="button">¡Registrate!</a>
-      </div>
+    </div>
+  
+    <div class="container-fluid p-5 text-white text-center texto-resaltado">
+      <h1>LA QUIERES YA</h1>
+      <h2>en menos de diez minutos lo puedes hacer!</h2>
+      <a class="btn btn-light btn-lg" href="#" role="button">¡Hazte Cliente!</a>
+    </div>
   </main>
-
+  
   <footer>
     <!-- Aquí puedes agregar el pie de página de tu landing -->
   </footer>
-
- 
